@@ -121,6 +121,7 @@ since 1999.  If I missed your name, let me know.
 * Rene Klootwijk
 * David Kmoch
 * Brandon Knitter
+* Uwe Knop
 * Ryoji Kobayashi
 * Uwe Knop
 * Daniel Koffler
